test/fail/enums_and_variants/wrong_arg_count_variant.lly
#[
SyntaxError: Variant Some expects 1 args, but got 2.
    from wrong_arg_count_variant.lly:11
]#

enum Option[A] {
	Some(A)
	None
}

var v = Some(1, 2)
